--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,19 @@
 body {
-    background: linear-gradient(112.1deg, rgb(32, 38, 57) 11.4%, rgb(63, 76, 119) 70.2%);
+    /* background: linear-gradient(112.1deg, rgb(32, 38, 57) 11.4%, rgb(63, 76, 119) 70.2%); */
+    background: #2B3134;
     padding: 50px;
     font-family: 'Roboto', sans-serif;
     width: 100%;
     height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
 }
 
 .header {
     font-family: 'Playfair Display', serif;
     text-align: center;
     color: white;
-    position: absolute;
-    top: 10%;
     margin-left: auto;
     margin-right: auto;
     left: 0;
@@ -47,7 +46,7 @@ body {
 
 #copyBtn {
     position: absolute;
-    top: 30px;
+    bottom: 30px;
     right: 10px;
     border: solid 1px rgb(63, 76, 119);
     color: rgb(63, 76, 119);
@@ -102,6 +101,7 @@ input {
     margin-bottom: 20px;
 }
 
+
 #rewriteBtn {
     align-self: center;
 }
@@ -121,3 +121,55 @@ input {
     text-decoration: none;
     cursor: pointer;
 }
+
+
+/* loading screen */
+
+/* body{
+    padding: 1em;
+    background: #2B3134;
+    color: #777;
+    text-align: center;
+    font-family: "Gill sans", sans-serif;
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  } */
+
+  p{
+    font-style: italic;
+  }
+
+  #loaderBG {
+    background: rgba(0,0,0,0.9);
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
+    transition: all 0.2s;
+  }
+
+  .loader{
+    margin: 0 0 2em;
+    height:fit-content;
+    width: fit-content;
+    text-align: center;
+    padding: 1em;
+    margin: 0;
+    display: inline-block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  
+  /*
+    Set the color of the icon
+  */
+  svg path,
+  svg rect{
+    fill: #FF6700;
+  }
